--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -16,6 +16,7 @@
   <div class="well">
     <h2>Contest Archive</h2>
   </div>
+  {% include "contest/message.html" %}
   <!--contests overview-->
   <table class="table table-striped table-hover">
     <thead>
