add message when reply, ask, register, edit, create, delete contest

--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -25,6 +25,7 @@
       {% endif %}
       </h2>
     </div>
+    {% include "contest/message.html" %}
     <div class="panel panel-info">
       <div class="panel-heading">
         <h1 class="panel-title" style="text-align:center;">Time</h1>
