--- a/contest/static/contest/css/contestArchive.css
+++ b/contest/static/contest/css/contestArchive.css
@@ -18,8 +18,12 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
 
-a.black {
+.black {
   color: black;
+}
+
+.green {
+  color: green;
 }
 
 td.not-clickable-area {
