--- a/contest/templates/contest/message.html
+++ b/contest/templates/contest/message.html
@@ -1,24 +1,34 @@
 {% if messages %}
     {% for message in messages %}
     {% if message.tags == 'info' %}
-    <div class="alert alert-info" role="alert">
-      <a href="#" class="alert-link">{{ message }}</a>
+    <div class="alert alert-info alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span></button>
+      <a>{{ message }}</a>
     </div>
     {% elif message.tags == 'success' %}
-    <div class="alert alert-success" role="alert">
-      <a href="#" class="alert-link">{{ message }}</a>
+    <div class="alert alert-success alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span></button>
+      <a>{{ message }}</a>
     </div>
     {% elif message.tags == 'warning' %}
-    <div class="alert alert-warning" role="alert">
-      <a href="#" class="alert-link">{{ message }}</a>
+    <div class="alert alert-warning alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span></button>
+      <a>{{ message }}</a>
     </div>
     {% elif message.tags == 'error' %}
-    <div class="alert alert-danger" role="alert">
-      <a href="#" class="alert-link">{{ message }}</a>
+    <div class="alert alert-danger alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span></button>
+      <a>{{ message }}</a>
     </div>
     {% else %}
-    <div class="alert alert-info" role="alert">
-      <a href="#" class="alert-link">{{ message }}</a>
+    <div class="alert alert-info alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span></button>
+      <a>{{ message }}</a>
     </div>
     {% endif %}
     {% endfor %}
