--- a/contest/templates/contest/overview.html
+++ b/contest/templates/contest/overview.html
@@ -1,6 +1,5 @@
 {% load contest_extras %} {% load staticfiles %} {% block import_source %}
 <link href="{% static 'contest/css/overview.css' %}" rel="stylesheet">
-<script src="{%static 'contest/js/overview.js'%}"></script>
 {% endblock import_source %}
 <table class="table table-striped">
   <thead>
@@ -19,15 +18,16 @@
            tabindex="-1" role="tab" data-toggle="tab">{{ problem.pname }}</a>
       </td>
       <td>
-        <div class="progress">
+        <div class="progress" data-toggle="tooltip" data-placement="top" 
+               title="{{problem.pass_rate|floatformat:2}}%">
           <div name="pass" class="progress-bar progress-bar-success"
-               role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+               role="progressbar" style="width: {{ problem.pass_rate }}%;">
             <span name="pass_ratio">
               {{ problem.pass_user }}/{{ scoreboard|total_contestant }}
               </span>
           </div>
           <div name="not_pass" class="progress-bar progress-bar-danger"
-           role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+               role="progressbar" style="width: {{ problem.not_pass_rate }}%;">
           </div>
         </div>
       </td>
