add color of is_homework, can_register icon. remove register contest as user in contest Archive

--- a/contest/static/contest/css/contestArchive.css
+++ b/contest/static/contest/css/contestArchive.css
@@ -22,9 +22,12 @@ a.black {
   color: black;
 }
 
-td.not-clickable-area {
-	background-color: #A0A0A0;
-	text-align:center;
+.green {
+  color: green;
+}
+
+.red {
+  color: red;
 }
 
 .separate-area{
