--- a/contest/templates/contest/register.html
+++ b/contest/templates/contest/register.html
@@ -11,28 +11,11 @@
 <hr>
 <div class="modal-body" id="register">
   <table width='100%'>
-    {% if user|can_register:contest %}
-    <tr>
-      <td>
-        <a class="btn btn-primary btn-lg btn-block" href="{% url 'contest:register' contest.id %}">
-          as {{ user.username }}</a>
-      </td>
-    </tr>
-    {% else %}
-    <tr>
-      <td class="not-clickable-area">
-        <div>
-          <h5>owner or coowner can not register</h5>
-        </div>
-      </td>
-    </tr>
-    {% endif %}
-    <tr class="separate-area"></tr>
     {% if groups %}
     <tr>
       <td>
         <a class="btn btn-success btn-lg btn-block" data-toggle="collapse"
-           data-target="#group_select">a Group</a>
+           data-target="#group_select">Group</a>
       </td>
     </tr>
     {% endif %}
@@ -68,7 +51,7 @@
       <form class="form-inline" method="POST" 
             action="{% url 'contest:register' contest.id %}">
         {% csrf_token %}
-        <label>How many Public User?</label>
+        <label>How many Public User do you want?</label>
         <br>
         <input class="form-control" type="text" name="public_user" 
                placeholder="0~{{ max_public_user }}">
