--- a/problem/templates/problem/problem_list.html
+++ b/problem/templates/problem/problem_list.html
@@ -13,10 +13,10 @@
       <tr>
         <td>
           {% if user == p.owner or user.is_admin %}
-            <button class="btn btn-info btn-xs" data-toggle="tooltip"
-                data-pacement="top" title="Rejudge Problem">
-              <span id='rejudge' class='glyphicon glyphicon-refresh'></span>
-            </button>
+            <!-- <button class="btn btn-info btn-xs" data-toggle="tooltip" -->
+            <!--     data-pacement="top" title="Rejudge Problem"> -->
+            <!--   <span id='rejudge' class='glyphicon glyphicon-refresh'></span> -->
+            <!-- </button> -->
             <a class="del_btn" href="{% url 'problem:delete_problem' p.pk %}">
               <button type="button" class="btn btn-danger btn-xs" data-toggle="tooltip"
                     data-placement="top" title="Delete Problem">
