--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -90,19 +90,7 @@
   </table>
 </div>
 <nav>
-  <ul class="pager">
-    <span class="step-links">
-      {% if contests.has_previous %}
-      <li><a href="?page={{ contests.previous_page_number }}"><span>&larr;</span> Previous</a></li>
-      {% endif %}
-      <span class="current">
-        Page {{ contests.number }} of {{ contests.paginator.num_pages }}.
-      </span>
-      {% if contests.has_next %}
-      <li><a href="?page={{ contests.next_page_number }}">Next <span>&rarr;</span></a></li>
-      {% endif %}
-  </span>
-  </ul>
+  {% include "utils/pager.html" with objects=contests %}
 </nav>
 <!-- register contest -->
 <div class="modal fade" id="register" tabindex="-1" role="dialog">
