--- a/problem/templates/problem/problem_list.html
+++ b/problem/templates/problem/problem_list.html
@@ -57,20 +57,4 @@ $(document).ready(function () {
 });
 </script>
 
-<ul class="pager">
-  <span class="step-links">
-    {% if problem.has_previous %}
-      <li>
-        <a href="?page={{ problem.previous_page_number }}"><span>&larr;</span> Previous</a>
-      </li>
-     {% endif %}
-    <span class="current">
-      Page {{ problem.number }} of {{ problem.paginator.num_pages }}.
-    </span>
-    {% if problem.has_next %}
-      <li>
-        <a href="?page={{ problem.next_page_number }}">Next <span>&rarr;</span></a>
-      </li>
-    {% endif %}
-  </span>
-</ul>
+{% include "utils/pager.html" with objects=problem %}
