--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -14,7 +14,7 @@
   <div class="container">
     <!--Title-->
     <div class="well">
-      <h2>{{ contest.cname }}
+      <h2>{{ contest.id }} - {{ contest.cname }}
       {% if user|can_edit_contest:contest %}
        <a href="{% url 'contest:edit' contest.id %}">
         <button type="button" class="btn btn-warning btn-sm" data-toggle="tooltip"
