change button position

--- a/index/templates/index/announcement.html
+++ b/index/templates/index/announcement.html
@@ -29,6 +29,7 @@
     {% else %}
     <button type="submit" class="btn btn-primary">Update</button>
     {% endif %}
+    <a href="{%url 'index:index' %}" class="btn btn-primary">Cancel</a>
   </form>
 </div>
 <br>
