--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -79,7 +79,7 @@
           {% endif %}
         </td>
         <td>{{ contest.id }}</td>
-        <td><a class="black" href="{% url 'contest:contest' contest.id %}">{{ contest.cname }}</a>
+        <td><a href="{% url 'contest:contest' contest.id %}">{{ contest.cname }}</a>
         </td>
         <td>{{ contest.start_time|date:"Y/m/d H:i:s" }}</td>
         <td>{{ contest.end_time|date:"Y/m/d H:i:s" }}</td>
