--- a/problem/templates/problem/panel.html
+++ b/problem/templates/problem/panel.html
@@ -5,7 +5,7 @@
   <div>
     {% if can_add_problem %}
     <button id="add_problem_btn" style='display:inline-block' class="btn btn-warning" href="{% url 'problem:new' %}"
-      data-toggle="tooltip" data-placement="top" title="add problem">+</button>
+      data-toggle="tooltip" data-placement="top" title="add problem">Add Problem</button>
     <div id="add_problem_form" style="display:inline-block;margin-left:10px">
       <form action="{% url 'problem:new' %}" method="POST" class="form-inline">
         {% csrf_token %}
