--- a/users/templates/users/codeEditor.html
+++ b/users/templates/users/codeEditor.html
@@ -32,7 +32,7 @@
     {% csrf_token %}
     <div class="row">
       <div class="col-lg-2">
-        {{ form.pid|bootstrap_horizontal }}
+        {{ form.pid|bootstrap }}
       </div>
       <div class="col-lg-offset-1 col-lg-6">
         {{ form.language|bootstrap_horizontal }}
