--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -35,7 +35,7 @@ SOFTWARE.
     {% if user.is_authenticated %}
     <link rel="stylesheet" href="{% static '' %}bootswatch/{{user.theme}}/bootstrap.css">
     {% else %}
-    <link rel="stylesheet" href={% static "bootswatch/{{defaut_theme}}/bootstrap.css" %}>
+    <link rel="stylesheet" href="{% static '' %}bootswatch/{{default_theme}}/bootstrap.css">
     {% endif %}
     <script src={% static "bootstrap/dist/js/bootstrap.min.js" %}></script>
     <script src={% static './js/function.js'%}></script>
