change radio to dropdown

--- a/users/templates/users/codeEditor.html
+++ b/users/templates/users/codeEditor.html
@@ -34,8 +34,8 @@
       <div class="col-lg-2">
         {{ form.pid|bootstrap }}
       </div>
-      <div class="col-lg-offset-1 col-lg-6">
-        {{ form.language|bootstrap_horizontal }}
+      <div class="col-lg-offset-1 col-lg-2">
+        {{ form.language|bootstrap }}
       </div>
     </div>
     {{ form.code|bootstrap }}
