auto fill in reply

--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -74,7 +74,9 @@
               <td>
               <button name="reply" type="button" class="btn btn-warning btn-xs"
                       data-toggle="modal" data-target="#reply"
-                      onclick="select({{ clarification.id }},'{{ clarification.content }}')">Reply</button>
+                      onclick="select({{ clarification.id }},'{{ clarification.content }}',
+                      '{{ clarification.reply }}')">
+                      Reply</button>
               </td>
               {% endif %}
               <td>{{ forloop.counter }}</td>
