--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -8,7 +8,7 @@
 {% block body_block %}
 <br>
 <script src={% static "Chart.js/Chart.js" %}></script>
-<script src={% static "js/piechartsettings.js"%}></script>
+<script src={% static "js/profile.js"%}></script>
 <script type="text/javascript">
 $(function() {
   plot_piechart({{ piechart_data|safe }});
@@ -57,41 +57,34 @@ $(function() {
       <div class="panel panel-default">
         <div class="panel-heading">Profile</div>
         <div class="panel-body">
-          {% if user == profile_user %}
-            <form class="form-horizontal" action="" method="post" style="margin:10px;">
+          <form class="form-horizontal" action="" method="post" style="margin:10px;">
+            {% if user == profile_user %}
               {% csrf_token %}
               {{ profile_form|bootstrap_horizontal:'col-lg-4' }}
               <div class="modal-footer">
                 <button type="submit" name="profile_form"
                   class="btn btn-primary">Submit</button>
               </div>
-            </form>
-          {% else %}
-            <div class="form-group">
-              <div class='row'>
-                <div class='col-lg-2 col-lg-offset-1'>
-                  <label class="control-label">Username</label>
-                </div>
-                <div class='col-lg-6'>
+            {% else %}
+              <div class="form-group">
+                <label class="control-label col-lg-4">Username</label>
+                <div class="col-lg-8">
                   <input class="form-control" readonly="True" type="text"
-                    value="{{ profile_user.username }}">
+                    id="id_username" value="{{ profile_user.username }}">
                 </div>
               </div>
-            </div>
-            <div class="form-group">
-              <div class='row'>
-                <div class='col-lg-2 col-lg-offset-1'>
-                  <label class="control-label">Email</label>
-                </div>
-                <div class='col-lg-6'>
-                  <input class="form-control" readonly="True" type="email" value="{{ profile_user.email }}">
+              <div class="form-group">
+                <label class="control-label col-lg-4">Email</label>
+                <div class="col-lg-8">
+                  <input class="form-control" readonly="True" type="email"
+                  value="{{ profile_user.email }}">
                 </div>
               </div>
-            </div>
-          {% endif %}
-
+            {% endif %}
+          </form>
           {% if user|can_change_userlevel:profile_user %}
-            <form class="form-horizontal" action="" method="post" style="margin:10px;">
+            <form class="form-horizontal" action="" method="post" style="margin:10px;"
+                  onclick="return confirm_change_userlevel()">
               {% csrf_token %}
               {{ userlevel_form|bootstrap_horizontal:'col-lg-4' }}
               <div class="modal-footer">
@@ -99,6 +92,14 @@ $(function() {
                   class="btn btn-primary">Submit</button>
               </div>
             </form>
+          {% else %}
+            <div class="form-group">
+              <label class="control-label col-lg-4">Email</label>
+              <div class="col-lg-8">
+                <input class="form-control" readonly="True" type="email"
+                value="{{ profile_user.email }}">
+              </div>
+            </div>
           {% endif %}
         </div>
       </div>
