--- a/users/templates/users/codeEditor.html
+++ b/users/templates/users/codeEditor.html
@@ -16,7 +16,7 @@
 <script src={% static "codemirror/keymap/sublime.js" %}></script>
 <script src={% static "codemirror/mode/clike/clike.js" %}></script>
 <!-- custom settings -->
-<script src={% static "js/editorsettings.js" %}></script>
+<script src={% static "js/editorSettings.js" %}></script>
 <!-- file input -->
 <script src={% static "bootstrap.file-input/index.js" %}></script>
 <style>
