unify with list style

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -32,7 +32,9 @@ $(function() {
 </style>
 
 <div class="container">
-  <h1>{{ profile_user }}'s Profile</h1>
+  <div class="well">
+    <h2><b>{{ profile_user }}</b>'s Profile</h2>
+  </div>
   <div class="row">
     <div class="col-lg-7">
       {% block statistic_block %}
