change appearence of userlevel

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -95,7 +95,7 @@ $(function() {
               </div>
             {% else %}
               <div class="form-group">
-                <label class="control-label col-lg-4">Userlevel</label>
+                <label class="control-label col-lg-4">User Level</label>
                 <div class="col-lg-8">
                   <input class="form-control" readonly="True"
                   value="{{ profile_user.get_user_level_display }}">
