--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -75,13 +75,15 @@ $(function() {
                     id="id_username" value="{{ profile_user.username }}">
                 </div>
               </div>
-              <div class="form-group">
-                <label class="control-label col-lg-4">Email</label>
-                <div class="col-lg-8">
-                  <input class="form-control" readonly="True" type="email"
-                  value="{{ profile_user.email }}">
+              {% if user|reveal_private_info:profile_user %}
+                <div class="form-group">
+                  <label class="control-label col-lg-4">Email</label>
+                  <div class="col-lg-8">
+                    <input class="form-control" readonly="True" type="email"
+                    value="{{ profile_user.email }}">
+                  </div>
                 </div>
-              </div>
+              {% endif %}
             {% endif %}
           </form>
           <form class="form-horizontal" action="" method="post" style="margin:10px;"
@@ -94,13 +96,15 @@ $(function() {
                   class="btn btn-primary">Submit</button>
               </div>
             {% else %}
-              <div class="form-group">
-                <label class="control-label col-lg-4">User Level</label>
-                <div class="col-lg-8">
-                  <input class="form-control" readonly="True"
-                  value="{{ profile_user.get_user_level_display }}">
+              {% if user|reveal_private_info:profile_user %}
+                <div class="form-group">
+                  <label class="control-label col-lg-4">User Level</label>
+                  <div class="col-lg-8">
+                    <input class="form-control" readonly="True"
+                    value="{{ profile_user.get_user_level_display }}">
+                  </div>
                 </div>
-              </div>
+              {% endif %}
             {% endif %}
           </form>
         </div>
