--- a/contest/static/contest/css/contest.css
+++ b/contest/static/contest/css/contest.css
@@ -18,7 +18,12 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
 
+.green {
+  color: green;
+}
+
 div.inline>ul>li {
   position: absolute;
   display: inline;
 }
+
