--- a/contest/templates/contest/reply.html
+++ b/contest/templates/contest/reply.html
@@ -24,6 +24,7 @@
             <label>{{ reply_form.reply_all }}Reply  All</label>
           </div>
           <div class="modal-footer">
+            <button type="button" class="btn btn-warning" onclick="noResponse()">No Response</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             <input type="submit" class="btn btn-primary" value="Send">
           </div>
