--- a/problem/templates/problem/edit.html
+++ b/problem/templates/problem/edit.html
@@ -9,7 +9,12 @@
 {% endblock %}
 {% block body_block %}
 <div class="container" id="Body">
-  <h4>You are editing problem {{pid}}: {{pname}}</h4>
+  <h4>
+    You are editing problem {{pid}}: {{pname}}
+    <a href="{% url 'problem:problem' %}" class="btn btn-primary">
+      Back to problem panel
+    </a>
+  </h4>
   <div style="width:80%; float:left;">
     <ul class="nav nav-tabs" role="tablist">
       <li class="active">
