judge type prefix

--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -2,7 +2,7 @@
 <div class="pname_block panel">
   <div class="left">
     <div class="pname">
-      <h2>{{ problem.pname }} &nbsp;&nbsp;
+      <h2>problem #{{ problem.pk }}:<br>{{ problem.pname }} &nbsp;&nbsp;
         {% if problem.owner == user or user.user_level == 'ADMIN'%}
           {% if not preview %}
             <a class="btn btn-primary" href="{% url 'problem:problem.views.edit' problem.pk %}">EDIT</a>
