--- a/contest/templates/contest/editContest.html
+++ b/contest/templates/contest/editContest.html
@@ -1,5 +1,6 @@
 {% extends "index/base.html" %} 
 {% load staticfiles %}
+{% load contest_extras %}
 {% block title_name %}
 {% load bootstrap %}
 <title>{{ title }}</title>
@@ -16,8 +17,8 @@
   <div class="well">
     <h2>
     {{ title }}
-    {% if cid %}
-    <a href="{% url 'contest:contest' cid %}">
+    {% if contest %}
+    <a href="{% url 'contest:contest' contest.id %}">
       <button type="button" class="btn btn-primary">
         See this contest
       </button>
@@ -34,7 +35,13 @@
     {% csrf_token %}
     {% for field in form %}
     {% if field.label_tag == form.owner.label_tag %}
-    	{{ field.as_hidden }}
+      {{ field.as_hidden }}
+    {% elif field.label_tag == form.coowner.label_tag %}
+      {% if user|is_coowner:contest %}
+      {{ field.as_hidden }}
+      {% else %}
+      {{ field|bootstrap }}
+      {% endif %}
     {% else %}
       {{ field|bootstrap }}
     {% endif %}
