change model display

--- a/status/templates/status/status.html
+++ b/status/templates/status/status.html
@@ -14,7 +14,7 @@
   <!--title-->
   <div class="well">
     <h2>Status</h2>
-    <form id="statusFilter" method="get">
+    <form method="get">
       <div class="col-lg-2"></div>
     {% for field in status_filter %}
       <div class="col-lg-2">{{ field|bootstrap }}</div>
