--- a/problem/templates/problem/detail.html
+++ b/problem/templates/problem/detail.html
@@ -1,6 +1,6 @@
 {% extends 'problem/base.html' %}
 {% block title_name %}
-<title>Problem Detail</title>
+<title>Problem {{ problem.pk }}</title>
 {% endblock title_name %}
 {% block body_block %}
 <div class="container" id="Body">
