--- a/problem/templates/problem/edit.html
+++ b/problem/templates/problem/edit.html
@@ -9,12 +9,15 @@
 {% endblock %}
 {% block body_block %}
 <div class="container" id="Body">
-  <h4>
-    You are editing problem {{pid}}: {{pname}}
-    <a href="{% url 'problem:problem' %}" class="btn btn-primary">
+  <h2>
+    {{pid}} - {{pname}}
+    <a href="{% url 'problem:detail' pid %}" class="btn btn-primary">
+      See this problem
+    </a>
+    <a href="{% url 'problem:problem' %}" class="btn btn-info">
       Back to problem panel
     </a>
-  </h4>
+  </h2>
   <div style="width:80%; float:left;">
     <ul class="nav nav-tabs" role="tablist">
       <li class="active">
