--- a/status/templates/status/status.html
+++ b/status/templates/status/status.html
@@ -6,6 +6,8 @@
 <title>Status</title>
 {% endblock title_name %}
 {% block import_source %}
+<link rel="stylesheet" href={% static "jquery-ui/themes/dark-hive/jquery-ui.css" %}>
+<script src={% static "jquery-ui/ui/jquery-ui.js" %}></script>
 {% endblock import_source %}
 {% block body_block %}
 
@@ -13,7 +15,15 @@
   <br>
   <!--title-->
   <div class="well">
-    <h2>Status</h2>
+    <h2
+      {% if running_contests %}
+        title='<ol>{% for contest in running_contests %} <li>{{contest}}</li> {% endfor %}</ol>'
+      {% endif %}>
+      Status
+      {% if running_contests %}
+        ({{ running_contests.count }} running contest{{ running_contests.count|pluralize:"s" }}.)
+      {% endif %}
+    </h2>
     <form method="get">
       <div class="col-lg-2"></div>
     {% for field in status_filter %}
@@ -30,4 +40,12 @@
     {% include "utils/pager.html" with objects=submissions %}
   {% endif %}
 </div>
+<script type="text/javascript">
+  $(function () {
+    $(document).tooltip({
+      track: true
+    });
+  })
+</script>
+
 {% endblock body_block %}
