login logout redirect to previous page

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -182,14 +182,14 @@ SOFTWARE.
             {% endif %}
             {% if user.is_authenticated %}
             <li class="nav-text-auth">
-              <a href={% url "users:profile" user.username %}>
+              <a href="{% url 'users:profile' user.username %}">
                 <i id="name-text">{{ user.username }}</i>
               </a>
             </li>
-            <li class="nav-text-auth"><a href={% url "users:logout" %}>Logout</a></li>
+            <li class="nav-text-auth"><a href="{% url 'users:logout' %}?next={{ request.path }}">Logout</a></li>
             {% else %}
-            <li class="nav-text-auth"><a href={% url "users:login" %}>Login</a></li>
-            <li class="nav-text-auth"><a href={% url "users:create" %}>Register</a></li>
+            <li class="nav-text-auth"><a href="{% url 'users:login' %}?next={{ request.path }}">Login</a></li>
+            <li class="nav-text-auth"><a href="{% url 'users:create' %}">Register</a></li>
             {% endif %}
           </ul>
         </div>
