--- a/index/templates/index/404.html
+++ b/index/templates/index/404.html
@@ -30,10 +30,11 @@ SOFTWARE.
   <title>404</title>
   <!-- bootstrap, bootwatch JS & CSS -->
   {% if user.is_authenticated %}
-  <link rel="stylesheet" href="{% static '' %}bootswatch/{{user.theme}}/bootstrap.css">
-  {% else %}
-  <link rel="stylesheet" href={% static "bootswatch/paper/bootstrap.css" %}>
+    <link rel="stylesheet" href="{% static '' %}bootswatch/{{user.theme}}/bootstrap.css">
+    {% else %}
+    <link rel="stylesheet" href="{% static '' %}bootswatch/{{default_theme}}/bootstrap.css">
   {% endif %}
+  <script src={% static "jquery/dist/jquery.min.js" %}></script>
   <script src={% static "bootstrap/dist/js/bootstrap.min.js" %}></script>
   <link rel="stylesheet" href={% static "./css/index.css"%} media="screen">
 </head>
@@ -47,7 +48,8 @@ SOFTWARE.
   <p class="status-message">{{ error_message }}</p>
   <br>
   <p class="status-condition">
-    Sorry , the page you are looking for seems to be missing.
+    Sorry , the page you are looking for seems to be missing.<br>
+    <a href="javascript:history.go(-1)">Go Back</a>
   </p>
 </body>
 </html>
