edit problem title

--- a/problem/templates/problem/edit.html
+++ b/problem/templates/problem/edit.html
@@ -1,7 +1,7 @@
 {% extends "problem/base.html" %}
 {% load staticfiles %}
 {% block title_name %}
-<title>Problem Edit</title>
+<title>Edit Problem {{ pid }}</title>
 {% endblock title_name %}
 {% block import_source %}
   {{block.super}}
