--- a/contest/templates/contest/download.html
+++ b/contest/templates/contest/download.html
@@ -1,9 +1,20 @@
 {% extends "index/base.html" %} {% block body_block %}
 <br>
-<br>
 <div class="container" id="list">
   <div class="well" style="text-align:center;">
-    <h2>{{ contest.id }} - {{ contest.cname }}</h2>
+    <h2>
+      {{ contest.id }} - {{ contest.cname }}
+      <a href="{% url 'contest:contest' contest.id %}">
+        <button type="button" class="btn btn-primary">
+          See this contest
+        </button>
+      </a>
+      <a href="{% url 'contest:archive' %}">
+        <button type="button" class="btn btn-info">
+          Go to Contest Archive
+        </button>
+      </a>
+    </h2>
   </div>
   <form method="POST" action="{% url 'contest:download' %}">
     {% csrf_token %}
