--- a/utils/templates/utils/pager.html
+++ b/utils/templates/utils/pager.html
@@ -1,5 +1,6 @@
 {% load utils_filters %}
 {% load static %}
+<script src={% static "jquery.url.min/index.js" %}></script>
 <script src={% static "js/pager.js" %}></script>
 <form class="form-inline" id="pagerForm">
   <ul class="pager">
