--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -18,7 +18,7 @@
       <a>Status</a> &nbsp;|&nbsp;
       <a>Printable </a> &nbsp;|&nbsp;
       <a>Rank</a> &nbsp;|&nbsp;
-      <a data-toggle='modal' data-target='#myModal'>Limits</a>
+      <a data-toggle='modal' data-target='#limit_{{ problem.pk }}'>Limits</a>
       {% if not preview %}
         <a class="btn btn-primary" href="{% url 'users:submit' problem.pk %}">Submit</a>
       {% endif %}
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<div class='modal fade' id='myModal'>
+<div class='modal fade' id='limit_{{ problem.pk }}'>
   <div class='modal-dialog modal-sm'>
     <div class='modal-content'>
       <div class='modal-header'>
