--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -124,7 +124,7 @@ SOFTWARE.
             <li class="nav-text"><a href="{% url 'problem:problem' %}">Problem</a></li>
             <li class="nav-text"><a href="{% url 'users:submit' %}">Submit</a></li>
             <li class="nav-text"><a href="{% url 'status:status' %}?username={{ user.username }}">Status</a></li>
-            <li class="nav-text"><a href="{% url 'group:list' %}">Group</a></li>
+            <!--<li class="nav-text"><a href="">Group</a></li>-->
             <!--
             <li class="dropdown nav-text">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"
